# CircularBuffer

./: CMakeLists.txt  README.md  main.cpp
CCircularBuffer/inc/: CCircularBuffer.h  CCircularBuffer_ConstIterator.h  CCircularBuffer_Iterator.h
CCircularBufferExt/inc/: CCircularBufferExt.h
tests/: CCircularBuffer_tests.cpp  CMakeLists.txt
